--- a/SuperHero/src/main/resources/application-test.properties
+++ b/SuperHero/src/main/resources/application-test.properties
@@ -1,8 +1,6 @@
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/SuperHero
+spring.datasource.url= jdbc:mysql://localhost:3306/SuperHeroTest
 spring.datasource.username= root
 spring.datasource.password= Hendon786!
 
-server.port=8087
-
-
+server.port=8088
