--- a/SuperHero/src/main/resources/application.properties
+++ b/SuperHero/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SuperHero
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testingSuperHero
 spring.datasource.username=root
-spring.datasource.password=Malec08maciej
-
+spring.datasource.password= 
 
 
 server.port=8086
