--- a/SuperHero/src/main/resources/application-test.properties
+++ b/SuperHero/src/main/resources/application-test.properties
@@ -1,9 +1,8 @@
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testingSuperHero
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testSuperHero
 spring.datasource.username=root
-spring.datasource.password= 
-
-server.port = 8022
+spring.datasource.password=Malec08maciej
 
 
+
+server.port=8084
