--- a/SuperHero/src/main/resources/application.properties
+++ b/SuperHero/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testingSuperHero
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SuperHero
 spring.datasource.username=root
-spring.datasource.password= 
+spring.datasource.password=Malec08maciej
+
 
 
 server.port=8086
